Add Biome.js format script using Bun

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"type": "module",
 	"private": true,
 	"scripts": {
-		"start": "bun run index.ts" 
+		"format": "bunx @biomejs/biome format --write .",
+		"start": "bun run index.ts"
 	},
 	"devDependencies": {
 		"@types/bun": "latest"
