--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "artefact",
-	"module": "index.ts",
+	"module": "src/main.ts",
 	"type": "module",
 	"private": true,
 	"scripts": {
 		"format": "bunx @biomejs/biome format --write .",
-		"start": "bun run index.ts"
+		"start": "bun run src/main.ts"
 	},
 	"devDependencies": {
 		"@types/bun": "latest"
