--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
 		"check": "bun x @biomejs/biome check --fix .",
 		"format": "bun x @biomejs/biome format --fix .",
 		"lint": "bun x @biomejs/biome lint --fix .",
-		"build:sql": "bun x drizzle-kit generate --dialect sqlite --schema ./src/data/schemas/**/*.schema.ts",
+		"build:sql": "bun --define BUILD_TARGET='\"SQLite\"' x drizzle-kit generate --dialect sqlite --schema ./src/data/schemas/**/*.schema.ts",
 		"start": "bun run src/main.ts"
 	},
 	"devDependencies": {
-		"@types/bun": "latest"
+		"@types/bun": "latest",
+		"drizzle-kit": "^0.31.9"
 	},
 	"peerDependencies": {
 		"typescript": "^5.9.3"
+	},
+	"dependencies": {
+		"drizzle-orm": "0.45.1"
 	}
 }
