Add `--bun` flag to `bun x` scripts

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
 	"private": true,
 	"scripts": {
 		"fix": "bun run format && bun run check && bun run lint",
-		"check": "bun x @biomejs/biome check --fix .",
-		"format": "bun x @biomejs/biome format --fix .",
-		"lint": "bun x @biomejs/biome lint --fix .",
+		"check": "bun x --bun @biomejs/biome check --fix .",
+		"format": "bun x --bun @biomejs/biome format --fix .",
+		"lint": "bun x --bun @biomejs/biome lint --fix .",
 		"build:sql": "BUILD_TARGET=SQLite drizzle-kit generate --dialect sqlite --schema ./src/data/schemas/index.ts",
 		"start": "bun run src/main.ts"
 	},
